--- a/build.config
+++ b/build.config
@@ -191,10 +191,10 @@ CONFIG_FIRMWARE_INCLUDE_OPENSSL_EC=y
 CONFIG_FIRMWARE_INCLUDE_OPENSSL_EXE=y
 
 ### Include xUPNPd IPTV mediaserver. ~0.3MB
-CONFIG_FIRMWARE_INCLUDE_XUPNPD=y
+#CONFIG_FIRMWARE_INCLUDE_XUPNPD=y
 
 ### Include Minidlna UPnP mediaserver. ~1.6MB
-CONFIG_FIRMWARE_INCLUDE_MINIDLNA=y
+#CONFIG_FIRMWARE_INCLUDE_MINIDLNA=y
 
 ### Include Transmission torrent. openssl ~1.2MB, transmission ~1.5MB
 #CONFIG_FIRMWARE_INCLUDE_TRANSMISSION=y
